--- a/MemoryMosaic/Pages/LibraryContent/Search.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Search.razor
@@ -30,7 +30,7 @@
     private LibraryContentViewer lcv = new();
     private int selectedItemsCount;
     private ElementReference searchInput;
-    private string headerVis = "hidden", collectionsVis = "hidden", searchText = "", query;
+    private string headerVis = "hidden", collectionsVis = "hidden", searchText = "", query = "";
 
     private void SearchMedia()
     {
