--- a/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
+++ b/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
@@ -31,7 +31,7 @@
             string ext = Path.GetExtension(path).ToLower();
             string name = Path.GetFileName(path);
 
-            string shortPath = path.Replace(S.libFolderPath!, "").Replace('\\', '/');
+            string shortPath = path.Replace(S.libFolderPath, "").Replace('\\', '/');
             shortPath = Path.GetFileName(S.libFolderPath) + shortPath;
 
             <div class="itemDiv">
@@ -61,9 +61,7 @@
 }
 
 @code {
-    private List<string> untrackedFiles;
-
-    protected override void OnInitialized() => untrackedFiles = M.GetUntrackedLibFiles();
+    private readonly List<string> untrackedFiles = M.GetUntrackedLibFiles();
 
     ///Move a single item to mm_import.
     private void MoveBtnClick(int index)
