--- a/MemoryMosaic/Pages/Test.razor
+++ b/MemoryMosaic/Pages/Test.razor
@@ -8,10 +8,7 @@
 
 @code{
 
-    private static async void Yes()
+    private static void Yes()
     {
-        Collection c = await C.GetCollectionDetailsAsync("1");
-        Console.WriteLine(c.name);
     }
-    
 }
