--- a/MemoryMosaic/Shared/ShortcutsReference.razor
+++ b/MemoryMosaic/Shared/ShortcutsReference.razor
@@ -134,44 +134,44 @@
     private string visibility = "hidden";
     
     [Parameter]
-    public string IText { get; set; }
+    public string? IText { get; set; }
 
     [Parameter]
-    public string DelText { get; set; }
+    public string? DelText { get; set; }
 
     [Parameter]
-    public string EscText { get; set; }
+    public string? EscText { get; set; }
 
     [Parameter]
-    public string LeftText { get; set; }
+    public string? LeftText { get; set; }
 
     [Parameter]
-    public string RightText { get; set; }
+    public string? RightText { get; set; }
 
     [Parameter]
-    public string CtrlDText { get; set; }
+    public string? CtrlDText { get; set; }
 
     [Parameter]
-    public string CtrlEText { get; set; }
+    public string? CtrlEText { get; set; }
 	
     [Parameter]
-    public string CtrlGText { get; set; }
+    public string? CtrlGText { get; set; }
 
     [Parameter]
-    public string AltFText { get; set; }
+    public string? AltFText { get; set; }
 
     [Parameter]
-    public string AltAText { get; set; }
+    public string? AltAText { get; set; }
     
     [Parameter]
-    public string AltCText { get; set; }
+    public string? AltCText { get; set; }
 
     [Parameter]
-    public string AltSText { get; set; }
+    public string? AltSText { get; set; }
 
     [Parameter]
-    public string AltLeftText { get; set; }
+    public string? AltLeftText { get; set; }
 	
     [Parameter]
-    public string AltRightText { get; set; }
+    public string? AltRightText { get; set; }
 }
