--- a/MemoryMosaic/Shared/KeyboardShortcuts.razor
+++ b/MemoryMosaic/Shared/KeyboardShortcuts.razor
@@ -5,70 +5,70 @@
 
 @code {
 	public void Dispose() => HotKeysContext.Dispose();
-	HotKeysContext HotKeysContext;
+	private HotKeysContext HotKeysContext = null!;
 
 	[Parameter]
-	public Action I { get; set; }
+	public Action? I { get; set; }
 
 	[Parameter]
-	public Action Del { get; set; }
+	public Action? Del { get; set; }
 
 	[Parameter]
-	public Action Esc { get; set; }
+	public Action? Esc { get; set; }
 
 	[Parameter]
-	public Action Left { get; set; }
+	public Action? Left { get; set; }
 
 	[Parameter]
-	public Action Right { get; set; }
+	public Action? Right { get; set; }
 
 	[Parameter]
-	public Action CtrlA { get; set; }
+	public Action? CtrlA { get; set; }
 	
 	[Parameter]
-	public Action CtrlS { get; set; }
+	public Action? CtrlS { get; set; }
 
 	[Parameter]
-	public Action CtrlO { get; set; }
+	public Action? CtrlO { get; set; }
 
 	[Parameter]
-	public Action CtrlD { get; set; }
+	public Action? CtrlD { get; set; }
 
 	[Parameter]
-	public Action CtrlE { get; set; }
+	public Action? CtrlE { get; set; }
 	
 	[Parameter]
-	public Action CtrlG { get; set; }
+	public Action? CtrlG { get; set; }
 	
 	[Parameter]
-	public Action CtrlSlash { get; set; }
+	public Action? CtrlSlash { get; set; }
 
 	[Parameter]
-	public Action AltF { get; set; }
+	public Action? AltF { get; set; }
 
 	[Parameter]
-	public Action AltA { get; set; }
+	public Action? AltA { get; set; }
 
 	[Parameter]
-	public Action AltC { get; set; }
+	public Action? AltC { get; set; }
 
 	[Parameter]
-	public Action AltS { get; set; }
+	public Action? AltS { get; set; }
 
 	[Parameter]
-	public Action AltLeft { get; set; }
+	public Action? AltLeft { get; set; }
 	
 	[Parameter]
-	public Action CtrlLeft { get; set; }
+	public Action? CtrlLeft { get; set; }
 	
 	[Parameter]
-	public Action CtrlRight { get; set; }
+	public Action? CtrlRight { get; set; }
 	
 	[Parameter]
-	public Action AltRight { get; set; }
+	public Action? AltRight { get; set; }
 	
 	[Parameter]
-	public Action Slash { get; set; }
+	public Action? Slash { get; set; }
 
 	protected override void OnInitialized()
 	{
